<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <ImageView
                android:id="@+id/details_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="50dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/java"
                android:contentDescription="@string/image_description" />

            <TextView
                android:id="@+id/details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/courses"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white_color"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courses_recycler"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_peekHeight="32dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/rounded_drawer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:elevation="4dp">

            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/opportunities"
                android:textColor="@color/white_color"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/oppor_recycler"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>