<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tech_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/border">
            <ImageView
                android:id="@+id/course_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/java"
                android:contentDescription="@string/image_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/course_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/course_price"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white_color"
                        app:chipBackgroundColor="@color/tertiary_color"
                        android:text="@string/free"
                        app:chipMinHeight="18dp"
                        android:textSize="14sp"
                        app:chipStartPadding="2dp"
                        app:chipEndPadding="2dp"
                        android:layout_marginRight="10dp"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/course_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="60"
                    android:text="@string/lorem"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>